tests/invalid/nested_impl_in_int.err_exp
nested_impl_in_int.m:026: In interface for module `nested_impl_in_int':
nested_impl_in_int.m:026:   in definition of sub-module `child':
nested_impl_in_int.m:026:   error: `:- implementation' declaration for
nested_impl_in_int.m:026:   sub-module occurs in interface section of parent
nested_impl_in_int.m:026:   module.
nested_impl_in_int.m:045: In interface for module `nested_impl_in_int':
nested_impl_in_int.m:045:   in definition of sub-module `child2':
nested_impl_in_int.m:045:   error: `:- implementation' declaration for
nested_impl_in_int.m:045:   sub-module occurs in interface section of parent
nested_impl_in_int.m:045:   module.
